--- a/nais/nais.yaml
+++ b/nais/nais.yaml
@@ -38,6 +38,9 @@ spec:
     autoInstrumentation:
       enabled: true
       runtime: sdk
+  prometheus:
+    enabled: true
+    path: /metrics
   resources:
     limits:
       memory: 32Mi
